# wallet_rust_next

./: LICENSE  test.sh
DB/: Dockerfile  docker-compose.yml
rust_next/: Dockerfile  eslint.config.mjs  package-lock.json  (+2 more)
tranfer_transaction/: .env_for_bash  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
tranfer_transaction/src/: lib.rs  main.rs
tranfer_transaction/src/backend/: mod.rs
tranfer_transaction/src/backend/argon2_hashing/: mod.rs
tranfer_transaction/src/backend/in_axum/: http.rs  mod.rs
tranfer_transaction/src/backend/in_axum/middleware/: token.rs
tranfer_transaction/src/backend/in_axum/routes/: get_all_user.rs  login.rs  mod.rs  registor.rs  send_money.rs
tranfer_transaction/src/backend/jwt_authentication/: claim.rs  mod.rs  passport_model.rs
tranfer_transaction/src/backend/postgres/: authen_postgres.rs  conn_postgres.rs  get_user_postgres.rs  mod.rs  regis_postgres.rs  schema.rs  transaction_posetgres.rs
tranfer_transaction/src/backend/postgres/migrations/2025-03-02-125006_sendValue/: down.sql  up.sql
tranfer_transaction/src/domain/: mod.rs
tranfer_transaction/src/domain/entity/: authen_entity.rs  mod.rs  resgis_entity.rs  transaction_entitys.rs
tranfer_transaction/src/domain/models/: authen_model.rs  get_all_user_model.rs  mod.rs  resgis_model.rs  transaction_models.rs
tranfer_transaction/src/domain/repo/: authen_repo.rs  get_user_repo.rs  mod.rs  regis_repo.rs  transaction_repo.rs
tranfer_transaction/src/service/: authen_service.rs  get_user_service.rs  mod.rs  regis_service.rs  say_hi_user.rs  transaction_service.rs
(+14 files in other folders)
