[package]
name = "tranfer_transaction"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
axum-extra = { version = "0.9.6", features = ["cookie", "typed-header"] }

dotenvy = "0.15.7"

tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

chrono = { version = "0.4.38", features = ["serde"] }
mockall = "0.13.0"
async-trait = "0.1.83"
diesel = { version = "2.2.4", features = [
    "postgres",
    "serde_json",
    "chrono",
    "r2d2",
] }
diesel_migrations = "2.2.0"

argon2 = "0.5.3"
rand = "0.8.5"
jsonwebtoken = { version = "9", default-features = false }
rust_decimal = "1.36.0"


